@@ -1,3 +1,9 @@
+2003-08-20  Rob Adams  <robadams@ucla.edu>
+
+	* src/constraints.c (meta_window_constrain): do northwest resize
+	when maximizing and fullscreening to avoid potential "off-by-one"
+	problems.
+
 2003-08-19  Rob Adams  <robadams@uclu.edu>
 
 	* src/stack.c (get_standalone_layer): put windows with
